--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -38,6 +38,9 @@ jobs:
     - name: Install dependencies
       run: ./gradlew dependencies
 
+    - name: Decode google-services.json
+      run: echo '${{ secrets.GOOGLE_SERVICES_JSON }}' > app/google-services.json
+    
     - name: Run unit tests
       run: ./gradlew test
 
