--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -12,47 +12,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Decode google-services.json
+      run: echo '${{ secrets.GOOGLE_SERVICES_JSON }}' > app/google-services.json
+      
     - name: Checkout repository
       uses: actions/checkout@v4
       
-    - name: Set up JDK
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'zulu'
-        cache: gradle
-        
-    - name: Set up Android SDK
-      uses: android-actions/setup-android@v3
-
-    - name: Install specific Android SDK version
-      run: |
-        sdkmanager "platforms;android-33" "build-tools;33.0.0" "platform-tools"
-
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-
-    - name: Clean project
-      run: ./gradlew clean
-
-    - name: Install dependencies
-      run: ./gradlew dependencies
-
-    - name: Decode google-services.json
-      run: echo '${{ secrets.GOOGLE_SERVICES_JSON }}' > app/google-services.json
+    - name: Run lint
+      run: ./gradlew lintDebug
     
-    - name: Run unit tests
-      run: ./gradlew test
-
-    - name: Run UI tests (optional)
-      run: ./gradlew connectedAndroidTest
-      continue-on-error: true
-
-    - name: Build APK
-      run: ./gradlew assembleRelease
-    
-    - name: Upload APK as an artifact
+    - name: Upload HTML test report
       uses: actions/upload-artifact@v4
       with:
-        name: release-apk
-        path: app/build/outputs/apk/release/app-release.apk
+        name: index.html
+        path: app/build/reports/lint-results-debug.html
