--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -15,6 +15,9 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
       
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+      
     - name: Run lint
       run: ./gradlew lintDebug
     
