--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -17,7 +17,10 @@ jobs:
       
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-      
+
+    - name: Decode google-services.json
+      run: echo '${{ secrets.GOOGLE_SERVICES_JSON }}' > app/google-services.json
+    
     - name: Run lint
       run: ./gradlew lintDebug
     
