--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -7,8 +7,8 @@ on:
     branches: [ "develop" ]
 
 jobs:
-  build:
-    name: Build and Test Android App
+  lint:
+    name: Run lint
     runs-on: ubuntu-latest
 
     steps:
@@ -29,3 +29,27 @@ jobs:
       with:
         name: index.html
         path: app/build/reports/lint-results-debug.html
+     
+  unit-test:
+    needs: [lint]
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+      
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+
+    - name: Decode google-services.json
+      run: echo '${{ secrets.GOOGLE_SERVICES_JSON }}' > app/google-services.json
+
+    - name: Run tests
+      run: ./gradlew test
+
+    - name: Upload HTML test report
+      uses: actions/upload-artifact@v4
+      with:
+        name: unit_test_report
+        path: app/build/reports/tests/testDebugUnitTest/
+    
