--- a/.github/workflows/manual_deploy_to_firebase.yml
+++ b/.github/workflows/manual_deploy_to_firebase.yml
@@ -7,6 +7,7 @@ on:
         type: string
         required: true
         default: 'Manual Debug Build'
+        description: 'Release Notes'
 
 jobs:
   build:
