--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:theme="@style/Theme.BlogMobileApp"
         tools:targetApi="31">
         <activity
+            android:name=".SearchActivity"
+            android:exported="false" />
+        <activity
             android:name=".BlogDetailActivity"
             android:exported="false" />
         <activity
@@ -28,7 +31,7 @@
             android:name=".HomeActivity"
             android:exported="false" />
         <activity
-            android:name=".ResetPassword"
+            android:name=".ResetPasswordActivity"
             android:exported="false" />
         <activity
             android:name=".ForgetPasswordActivity"
