--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -72,6 +72,8 @@ jobs:
       with:
         api-level: 33
         target: google_apis
+        arch: x86_64
+        disable-animations: true
         script: ./gradlew connectedCheck
 
     - name: Upload test report
