--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -74,6 +74,7 @@ jobs:
         target: google_apis
         arch: x86_64
         disable-animations: true
+        emu-wait-for-device: true
         script: ./gradlew connectedCheck
 
     - name: Upload test report
