--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -53,9 +53,9 @@ jobs:
         name: unit_test_report
         path: app/build/reports/tests/testDebugUnitTest/
     
-  instrumentation-test:
+  static-code-analysis:
     needs: [unit-test]
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
@@ -67,14 +67,7 @@ jobs:
     - name: Decode google-services.json
       run: echo '${{ secrets.GOOGLE_SERVICES_JSON }}' > app/google-services.json
 
-    - name: Run espresso tests
-      uses: reactivecircus/android-emulator-runner@v2
-      with:
-        api-level: 29
-        script: ./gradlew connectedCheck
-
-    - name: Upload test report
-      uses: actions/upload-artifact@v4
-      with:
-        name: instrumentation_test_report
-        path: app/build/reports/androidTests/connected/
+    - name: Run SonarQube Scan
+      run: ./gradlew app:sonarqube -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
