--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'com.google.gms.google-services'
+    id "org.sonarqube" version "4.0.0.2929"
 }
 
 android {
@@ -53,4 +54,17 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore'
     implementation 'com.google.firebase:firebase-database:20.3.0'
     implementation 'com.google.firebase:firebase-storage:20.3.0'
+}
+
+sonarqube {
+    properties {
+        property "sonar.projectKey", "android-app"
+        property "sonar.projectName", "Android App"
+        property "sonar.sources", "src/main/java"
+        property "sonar.language", "java"
+        property "sonar.sourceEncoding", "UTF-8"
+        property "sonar.tests", "src/test/java"
+        property "sonar.test.inclusions", "**/*Test.java"
+        property "sonar.exclusions", "**/R.java, **/BuildConfig.java"
+    }
 }
