--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,8 @@ android.useAndroidX=true
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+systemProp.sonar.source=./src/main
+systemProp.sonar.host.url=http://sonarcloud.io/
+systemProp.sonar.organization=mingnq
+systemProp.sonar.projectKey=MingNQ_BlogMobileApp
+systemProp.sonar.projectName=BlogMobileApp
