--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,8 +58,8 @@ dependencies {
 
 sonarqube {
     properties {
-        property "sonar.projectKey", "android-app"
-        property "sonar.projectName", "Android App"
+        property "sonar.projectKey", "MingNQ_BlogMobileApp"
+        property "sonar.projectName", "BlogMobileApp"
         property "sonar.sources", "src/main/java"
         property "sonar.language", "java"
         property "sonar.sourceEncoding", "UTF-8"
