--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'com.google.gms.google-services'
-    id "org.sonarqube" version "4.0.0.2929"
+    id "org.sonarqube" version "6.0.1.5171"
 }
 
 android {
@@ -56,15 +56,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:20.3.0'
 }
 
-sonarqube {
+sonar {
     properties {
         property "sonar.projectKey", "MingNQ_BlogMobileApp"
-        property "sonar.projectName", "BlogMobileApp"
-        property "sonar.sources", "src/main/java"
-        property "sonar.language", "java"
-        property "sonar.sourceEncoding", "UTF-8"
-        property "sonar.tests", "src/test/java"
-        property "sonar.test.inclusions", "**/*Test.java"
-        property "sonar.exclusions", "**/R.java, **/BuildConfig.java"
+        property "sonar.organization", "mingnq"
+        property "sonar.host.url", "https://sonarcloud.io"
     }
 }
