--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -67,24 +67,8 @@ jobs:
     - name: Decode google-services.json
       run: echo '${{ secrets.GOOGLE_SERVICES_JSON }}' > app/google-services.json
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-          java-version: 17
-          distribution: 'zulu' # Alternative distribution options are available
-    - name: Cache SonarQube packages
-      uses: actions/cache@v4
-      with:
-          path: ~/.sonar/cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
-    - name: Cache Gradle packages
-      uses: actions/cache@v4
-      with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
-          restore-keys: ${{ runner.os }}-gradle
-    - name: Build and analyze
+    - name: Run SonarQube Scan
+      run: ./gradlew sonarqube
       env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          run: ./gradlew build sonar --info
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
