--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,7 +59,14 @@ dependencies {
 sonar {
     properties {
         property "sonar.projectKey", "MingNQ_BlogMobileApp"
+        property "sonar.projectName", "BlogMobileApp"
         property "sonar.organization", "mingnq"
         property "sonar.host.url", "https://sonarcloud.io"
+        property "sonar.sources", "src/main/java"
+        property "sonar.language", "java"
+        property "sonar.sourceEncoding", "UTF-8"
+        property "sonar.tests", "src/test/java"
+        property "sonar.test.inclusions", "**/*Test.java"
+        property "sonar.exclusions", "**/R.java, **/BuildConfig.java"
     }
 }
