--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,5 +68,6 @@ sonar {
         property "sonar.tests", "src/test/java"
         property "sonar.test.inclusions", "**/*Test.java"
         property "sonar.exclusions", "**/R.java, **/BuildConfig.java"
+        property "sonar.coverage.jacoco.xmlReportPaths", ""
     }
 }
