--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,5 +69,6 @@ sonar {
         property "sonar.test.inclusions", "**/*Test.java"
         property "sonar.exclusions", "**/R.java, **/BuildConfig.java"
         property "sonar.coverage.jacoco.xmlReportPaths", ""
+        property "sonar.coverage.enabled", "false"
     }
 }
