--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,7 @@ sonar {
         property "sonar.tests", "src/test/java"
         property "sonar.test.inclusions", "**/*Test.java"
         property "sonar.exclusions", "**/R.java, **/BuildConfig.java"
+        property "sonar.coverage.exclusions", "**"
         property "sonar.coverage.jacoco.xmlReportPaths", ""
         property "sonar.coverage.enabled", "false"
     }
