--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -66,7 +66,7 @@ jobs:
       uses: actions/setup-java@v4
       with:
           java-version: 17
-          distribution: 'zulu'
+          distribution: 'temurin'
 
     - name: Decode google-services.json
       run: echo '${{ secrets.GOOGLE_SERVICES_JSON }}' > app/google-services.json
@@ -88,3 +88,32 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: ./gradlew build sonar --info
+
+  package:
+    needs: [static-code-analysis]
+    name: Generate APK
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+          java-version: 17
+          distribution: 'temurin'
+
+    - name: Decode google-services.json
+      run: echo '${{ secrets.GOOGLE_SERVICES_JSON }}' > app/google-services.json
+
+    - name: Build debug APK
+      run: ./gradlew assemblyDebug --stacktrace
+
+    - name: Upload APK
+      uses: actions/upload-artifact@v4
+      with:
+          name: blog-mobile-app.apk
+          path: app/build/outputs/apk/debug/app-debug.apk
