--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -110,7 +110,7 @@ jobs:
       run: echo '${{ secrets.GOOGLE_SERVICES_JSON }}' > app/google-services.json
 
     - name: Build debug APK
-      run: ./gradlew assemblyDebug --stacktrace
+      run: ./gradlew assembleDebug --stacktrace
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
