--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -39,8 +39,8 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
 
-#    - name: Decode google-services.json
-#      run: echo '${{ secrets.GOOGLE_SERVICES_JSON }}' > app/google-services.json
+    - name: Decode google-services.json
+      run: echo '${{ secrets.GOOGLE_SERVICES_JSON }}' > app/google-services.json
 
     - name: Run tests
       run: ./gradlew test
