--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -1,10 +1,10 @@
 name: Android CI
 
 on:
-  push:
-    branches: [ "develop" ]
-  pull_request:
-    branches: [ "master" ]
+#  push:
+#    branches: [ "develop" ]
+#  pull_request:
+#    branches: [ "master" ]
 
 jobs:
   lint:
